nullaway_error_28EEABB4-721D-486E-B4A6-F133A2A667C1.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context/src/main/java/org/springframework/validation/method/ParameterValidationResult.java:177: error: [NullAway] dereferenced expression otherResult is @Nullable
		return (getMethodParameter().equals(otherResult.getMethodParameter()) &&
		                                               ^
    (see http://t.uber.com/nullaway )
